# riti

./: Cargo.toml
.github/workflows/: main.yml
src/: utility.rs
src/phonetic/: suggestion.rs
