[package]
name = "riti"
version = "0.1.0"
authors = ["Muhammad Mominul Huque <mominul2082@gmail.com>"]
license = "MPL-2.0"
edition = "2018"
rust-version = "1.44.1"

[lib]
crate-type = ["staticlib"]

[features]
bench = []

[profile.release]
codegen-units = 1

[dependencies]
ahash = { version = "0.7", default-features = false }
emojicon = "0.3"
serde_json = "1.0"
regex = "1.5"
edit-distance = "2.1"
okkhor = { version = "0.5", features = ["regex"] }
poriborton = "0.2"
